2010-10-01  Vincent Scheib  <scheib@chromium.org>

Reviewed by James Robinson.

        REGRESSION: Lots of fast canvas updates fail to completely render
        https://bugs.webkit.org/show_bug.cgi?id=46319

        * fast/repaint/canvas-putImageData-expected.txt: Added.
        * fast/repaint/canvas-putImageData.html: Added.
        * platform/chromium-win/fast/repaint/canvas-putImageData-expected.checksum: Added.
        * platform/chromium-win/fast/repaint/canvas-putImageData-expected.png: Added.
        * platform/chromium/test_expectations.txt:
2010-10-01  Vincent Scheib  <scheib@chromium.org>

        Reviewed by James Robinson.

        REGRESSION: Lots of fast canvas updates fail to completely render
        https://bugs.webkit.org/show_bug.cgi?id=46319

        Test: fast/repaint/canvas-putImageData.html

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::putImageData):

Canonical link: https://commits.webkit.org/59496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68868 268f45cc-cd09-0410-ab3c-d52691b4dbfc